web_sg.tf
####SG presentation Tier #####

resource "aws_security_group" "webserver-security-group" {
  name        = "Web Server security group"
  description = "Allow HTTP and HTTPS inbound traffic on port 80/443"
  vpc_id      = aws_vpc.vpc_alumno04.id

  ingress {
    description     = "http access"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = ["${aws_security_group.alb-security-group.id}"]
  }
  ingress {
    description     = "https access"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = ["${aws_security_group.alb-security-group.id}"]
  }
  ingress {
    description     = "ssh access"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = ["${aws_security_group.alb-security-group.id}"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/10"]
  }
  tags = {
    Name = "Web Server security group"
  }
}
